# gstreamer

./: .arcconfig  .arch-inventory  .clang-format  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab-image-tags.yml  .gitlint  .gitmodules  .ignore  .indent_cpp_list  .indentignore  .pre-commit-config.yaml  2012.11+Brahmaputra.markdown  2012.5+Amazon.markdown  2012.7+Amazon+%28Bugfix+Release+1%29.markdown  2012.9+Amazon+%28Bugfix+Release+2%29.markdown  2013.6+Congo.markdown  AGENTS.md  AUTHORS  Android+tutorial+1+Link+against+GStreamer.markdown  Android+tutorial+2%3A+A+running+pipeline.markdown  Android+tutorial+2+A+running+pipeline.markdown  Android+tutorial+3%3A+Video.markdown  Android+tutorial+3+Video.markdown  Android+tutorial+4+A+basic+media+player.markdown  Android+tutorial+5%3A+A+Complete+media+player.markdown  Android+tutorial+5+A+Complete+media+player.markdown  Android+tutorials.markdown  Android.mk  Basic+Media+Player.markdown  Basic+tutorial+1%3A+Hello+world%21.markdown  Basic+tutorial+1+Hello+world.markdown  Basic+tutorial+10+GStreamer+tools.markdown  Basic+tutorial+11%3A+Debugging+tools.markdown  Basic+tutorial+11+Debugging+tools.markdown  Basic+tutorial+12%3A+Streaming.markdown  (+395 more)
Tests/: SdpTests.cs  meson.build  test_abi.py
check/: Makefile.am  gstcheck.c  gstcheck.h
codecanalyzer/: .gitignore  AUTHORS  COPYING  Makefile.am  README.md  autogen.sh  configure.ac
common/: ChangeLog  Makefile.am  c-to-xml.py  check.mak  gettext.patch  glib-gen.mak  gst-xmlinspect.py  gst.supp  gstdoc-scangobj  gtk-doc-plugins.mak  gtk-doc.mak  mangle-tmpl.py  plugins.xsl  po.mak  release.mak  scangobj-merge.py  upload.mak
data/: Makefile.am  meson.build
debian.upstream/: Makefile.am  changelog.in  control.in  copyright  gstreamer-vaapi-doc.install.in  gstreamer-vaapi.install.in  libgstvaapi-dev.install.in  libgstvaapi-drm.install.in  libgstvaapi-glx.install.in  libgstvaapi-wayland.install.in  libgstvaapi-x11.install.in  libgstvaapi.install.in  rules
debug-viewer/: .bzrignore  MANIFEST.in  README  gst-debug-strip-color.py  gst-debug-viewer  gst-debug-viewer.desktop  gst-debug-viewer.desktop.in  meson.build  org.freedesktop.GstDebugViewer.appdata.xml.in  setup.cfg  setup.py
doc/: .arch-inventory  .gitignore  Makefile.am  gst-sharp-docs.tree  gstreamer-sharp-docs.source
docs/: .gitignore  95NonPath  AUTHORS.xml  HACKING  HEAD.in  Makefile.am  NEWS.xml  README  README.xml  RELNOTES.xml  TODO.xml  all_index.md  base-classes.md  building-the-docs-on-debian  common.xsl  design-audiosinks.txt  docutils.conf  fakesrc.simple.validatetest.ini  full.xsl  ges-validate-action-types.md  gi-index.md  gst-hotdoc-plugins-scanner.c  gst-plugins-doc-cache-generator.py  gst-python.css  gst-python.ent.in  gst-python.xml  gst-validate-action-types.md  gst-validate-config.md  gst-validate-environment-variables.md  gst-validate-launcher.md  gst-validate-media-check.md  gst-validate-scenarios.md  gst-validate-test-file.md  gst-validate-transcoding.md  gst-validate.md  gst_plugins_cache.json  html.xsl  htmlinstall.mak  image-eps  image-pdf  (+16 more)
editor/: .gitignore  Makefile.am  editor.c  editor.dia  editor.glade  editor.ts  editorelement.glade  gsteditor.1  gsteditor.c  gsteditor.h  gsteditorbin.c  gsteditorcanvas.c  gsteditorconnection.c  gsteditorconnection.h  gsteditorcreate.c  gsteditorcreate.h  gsteditorelement.c  gsteditorimage.c  gsteditorimage.h  gsteditorpad.c  gsteditorpad.h  gsteditorpadtemplate.c  gsteditorpalette.c  gsteditorpalette.h  gsteditorproject.c  gsteditorproject.h  gsteditorprojectview.c  gsteditorproperty.c  gsteditorproperty.h  gstelementselect.c  gstelementselect.h
elementgen/: .gitignore  Makefile.am  elementgen.cs  gst-xmlinspect.c
examples/: .gitignore  Makefile.am  README.md  audio-controller.py  audioconcat.py  basic-tutorial-1.c  bps.py  bus_example.c  cp.py  cutter.py  debug-slider.py  debugslider.py  decodebin.py  dynamic_src.py  f2f.py  filesrc.py  fvumeter.py  gst-discover  gst123  gstfile.py  helloworld.py  main.c  meson.build  mixer.py  mpts_test2.c  pipeline-tester  play.py  pyidentity.py  record_sound.py  remuxer.py  requirements.txt  sinkelement.py  snippets.c  switch.py  synchronizer.py  tagsetter.py  test-appsrc.c  test-appsrc2.c  test-auth-digest.c  test-auth.c  (+23 more)
ext/: Makefile.am  meson.build
gconf/: .gitignore  Makefile.am  gstreamer.schemas  gstreamer.schemas.in
generator/: AliasGen.cs  BoxedGen.cs  ByRefGen.cs  CallbackGen.cs  ChildProperty.cs  ClassBase.cs  ClassField.cs  ClassGen.cs  CodeGenerator.cs  ConstFilenameGen.cs  ConstStringGen.cs  Ctor.cs  DESIGN  DefaultSignalHandler.cs  EnumGen.cs  FieldBase.cs  GObjectVM.cs  GenBase.cs  GenerationInfo.cs  HandleBase.cs  IAccessor.cs  IGeneratable.cs  IManualMarshaler.cs  InterfaceGen.cs  InterfaceVM.cs  LPGen.cs  LPUGen.cs  Makefile.am  ManagedCallString.cs  ManualGen.cs  MarshalGen.cs  Method.cs  MethodBase.cs  MethodBody.cs  MiniObjectGen.cs  ObjectBase.cs  ObjectField.cs  ObjectGen.cs  OpaqueGen.cs  Parameters.cs  (+16 more)
ges/: .gitignore  Makefile.am  ges-asset-clip.c  ges-asset-clip.h  ges-asset-file-source.c  ges-asset-file-source.h  ges-asset-timeline-object.c  ges-asset-timeline-object.h  ges-asset-track-object.c  ges-asset-track-object.h  ges-asset.c  ges-asset.h  ges-audio-source.c  ges-audio-source.h  ges-audio-test-source.c  ges-audio-test-source.h  ges-audio-track.c  ges-audio-track.h  ges-audio-transition.c  ges-audio-transition.h  ges-audio-uri-source.c  ges-audio-uri-source.h  ges-auto-transition.c  ges-auto-transition.h  ges-base-effect-clip.c  ges-base-effect-clip.h  ges-base-effect.c  ges-base-effect.h  ges-base-transition-clip.c  ges-base-transition-clip.h  ges-base-xml-formatter.c  ges-base-xml-formatter.h  ges-clip-asset.c  ges-clip-asset.h  ges-clip.c  ges-clip.h  ges-command-line-formatter.c  ges-command-line-formatter.h  ges-container.c  ges-container.h  (+207 more)
gnl/: Makefile.am  gnl.c  gnl.h  gnlcomposition.c  gnlcomposition.h  gnlghostpad.c  gnlghostpad.h  gnlobject.c  gnlobject.h  gnloperation.c  gnloperation.h  gnlsource.c  gnltypes.h  (+3 more)
(+24981 files in other folders)
